crates/aiken-lang/src/parser/chain/snapshots/field_access_else_1.snap
---
source: crates/aiken-lang/src/parser/chain/field_access.rs
description: "Code:\n\nfoo.else"
---
FieldAccess {
    location: 0..8,
    label: "else",
    container: Var {
        location: 0..3,
        name: "foo",
    },
}
